--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <span class="inline-block font-bold text-dark
                         text-4xl mt-1 lg:text-5xl">Devin Immanuel Putra</span></h1>
                     <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Web 
-                        <span class="text-dark">Frontend</span> Developer</h2>
+                        <span class="text-dark">Frontend and Backend</span> Developer</h2>
                     <p class="font-medium text-secondary mb-10 leading-relaxed">Belajar Web Programing itu adalah Salah satu skill yang ingin <span class="font-bold">Kudapatkan</span></p>
                 
                     <a href="#contact" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
