--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="xl:max-w-full xl:mx-auto text-center">
                 <p class="font-medium text-md text-secondary md:text-lg mt-10">2. <br>Bina Nusantara University (SEDANG BERLANGSUNG)</p>
                     <div class="w-full mb-8 px-4 py-5">
-                        <iframe class="mx-auto lg:w-[800px] lg:h-[450px] sm:w-[350px] sm:h-[200px]" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.5209076090155!2d110.37527774519653!3d-6.947712150136366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e708b4e6b7b7f3d%3A0x324a7dee0cee3ee0!2sBINUS%20University%20%40Semarang!5e0!3m2!1sid!2sid!4v1746763580741!5m2!1sid!2sid" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe class="mx-auto lg:w-[800px] lg:h-[450px] sm:w-[350px] sm:h-[200px]" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.5209076090155!2d110.37527774519653!3d-6.947712150136366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e708b4e6b7b7f3d%3A0x324a7dee0cee3ee0!2sBINUS%20University%20%40Semarang!5e0!3m2!1sid!2sid!4v1746763580741!5m2!1sid!2sid" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
     </section>
