--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <a href="https://devinimmanuelp.github.io/Login/" target="_blank"><img src="dist/image/1.png" alt="Portfolioku" class="w-full" /></a>
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Form Login ASPIRE8</h3>
-                    <p class="font-medium text-base text-secondary">Website diatas adalah project pertama saat saya membuat project sekolah dengan membuat form logim</p>
+                    <p class="font-medium text-base text-secondary">Website diatas adalah project pertama saat saya membuat project sekolah dengan membuat form login</p>
                 </div>
 
                 <div class="mb-12 p-4 md:w-1/2">
