--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             <ul class="text-slate-300">
               <li>
                 <a
-                  href="https://en.wikipedia.org/wiki/Efren_Reyes"
+                  href="https://id.wikipedia.org/wiki/Fitra_Eri"
                   target="_blank"
                   class="inline-block text-base hover:text-primary mb-3"
                   >Fitra Eri</a
